continue fixing rules where the list of classes kind seemed wrong